[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.32.0"
bevy_egui = "0.35.1"
bevy_image = { version = "0.16.1", features = ["jpeg"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand_core = "0.9"
bevy_rand = { version = "0.11", features = ["wyrand"] }
bevy_editor_pls = "0.10.0"
fake = { version = "4.3.0", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
